<resources>
    <string name="app_name">Assistant</string>
    <string name="emptytasklist">You don\'t have any tasks. Create new one</string>
    <string name="newtask">New Task</string>
    <string name="entertitle">Enter The Title</string>
    <string name="enternote">Enter The Note</string>
    <string name="createtask">Create Task</string>
    <string name="edittask">Edit Task</string>
    <string name="savechanges">Save Changes</string>
    <string name="pickdate">Pick Date</string>
    <string name="picktime">Pick Time</string>
    <string name="txtDetailsTaskFragmentTitle">Details</string>
    <string name="duplicationtask">You\'ve already set task for this time. Change time</string>
    <string name="taskcreated">Task created</string>
    <string name="taskupdated">Task updated</string>
    <string name="taskdeleted">Task deleted</string>
    <string name="taskfinished">Task finished</string>
</resources>